tests/resource/invalid/type/class/object_has_no_attribute_self.mamba
class X(def a: Int)

def x := X(10)
x.self
